Run CI ethereum_test on both parity and geth

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,10 @@ matrix:
       env: COMMAND=./internal/ci/truffle_test
     - language: go
       go: "1.10"
-      env: COMMAND=./internal/ci/ethereum_test
+      env: COMMAND=./internal/ci/ethereum_test devnet
+    - language: go
+      go: "1.10"
+      env: COMMAND=./internal/ci/ethereum_test gethnet
 
 before_install:
   # Go dependency manager dep
