Add Job Spec details GUI
[#157566497]

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^23.1",
     "jest-environment-enzyme": "^6.0.0",
     "jest-silent-reporter": "^0.0.4",
+    "json-pretty-html": "^1.1.2",
     "moment": "^2.20.1",
     "numeral": "^2.0.6",
     "query-string": "^6.1.0",
@@ -44,6 +45,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-static": "^5.9.3",
+    "react-universal-component": "^2.9.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "request-promise": "^4.2.2",
