--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "numeral": "^2.0.6",
     "query-string": "^6.1.0",
     "react": "^16.0.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^4.3.3",
     "react-redux": "^5.0.7",
